--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "lucide-react": "^0.234.0",
     "next": "13.4.4",
     "postcss": "8.4.24",
+    "rc-table": "^7.32.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.44.3",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3"
   }
